--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title class="text-center">Document</title>
 </head>
-<body>
+<body style="background-color: rgb(205, 209, 164);">
     
 </body>
 </html>
